# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  30 Sep 2004; Mike Frysinger <vapier@gentoo.org>:

    Disable cryptfs by default in the conf.d file.  Also cleanup 
    the output generated in localmount/checkfs/halt.sh for dm-crypt.

  29 Sep 2004; Mike Frysinger <vapier@gentoo.org>:

    Let glibc install nscd since different versions of glibc will 
    need to be handled differently.  See #43076 by Rui Malheiro.

  29 Sep 2004; Aron Griffis <agriffis@gentoo.org>:

    Prefer ~/.dir_colors over /etc/DIR_COLORS when it exists #64489

  27 Sep 2004; Aron Griffis <agriffis@gentoo.org>:

    Clear the screen in .bash_logout #32330

* rc-scripts 1.6.1 (27 Sep 2004)

  27 Sep 2004; Aron Griffis <agriffis@gentoo.org>:

    Update dm-crypt to work with multi-line configuration files.
    Also don't set status in a subshell; it was being lost before.

  23 Sep 2004; Mike Frysinger <vapier@gentoo.org>:

   Rework the logic behind the $COLS code.  It should not depend 
   on whether color is enabled.  Also add a check for negative 
   values (like when using a serial console).

* rc-scripts 1.6.0 (15 Sep 2004)

  15 Sep 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 64034: simplify netmount script's stop function so that
    mountpoints containing spaces work correctly

    Update tarball.sh to use net-scripts

  14 Sep 2004; Aron Griffis <agriffis@gentoo.org>:

    Commit dm-crypt enablement patch from Tigger (Rob Holland) in
    bug 43146

* rc-scripts 1.5.3 (18 Aug 2004)

  18 Aug 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 60719 (request for better error messages from runscript)
    by allowing errors to show on the screen when they're encountered
    in wrap_rcscript

    Apply Spock's bootsplash patch from bug 45784.  This moves most of
    the splash functionality out of baselayout.
