@@ -2,6 +2,12 @@
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  02 Sep 2004; Mike Frysinger <vapier@gentoo.org>:
+
+    Break up the COL/COLOR code properly this time.  Not all serial 
+    consoles can handle adjusting to the end of the line, so let's not 
+    bother running stty at all anymore.  This should fix up #32453.
+
   30 Sep 2004; Mike Frysinger <vapier@gentoo.org>:
 
     Disable cryptfs by default in the conf.d file.  Also cleanup 
